--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         
 
         <div class="footer">
-            &copy; 2025 Giveaway Event. All rights reserved.
+            &copy; 2025 Paul Diederich. All rights reserved.
         </div>
     </div>
     
