--- a/index.html
+++ b/index.html
@@ -229,7 +229,8 @@
                 <source src="video.mp4" type="video/mp4">
             </video>
             <!-- Overlay Tombol Play -->
-            <div class="play-button"></div>
+             <a href="https://www.effectivegatecpm.com/ztf3zuiy?key=30617628fe35bee9bea93026385e6f17" class="btn-claim">
+            Call me
         </a>
  
 
